# ghost-complete

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  dist-workspace.toml  lefthook.yml
.cargo/: config.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  bench.yml  ci.yml  codeql.yml  release.yml
assets/: demo_ghost-complete.mov  zed_vscode_demo.mov
benchmarks/: 0.3.0.md  0.4.0.md  baseline-pre-js-port.json  baseline-pre-js-port.md  binary-size-baseline.txt  v0.10.0-beta.1.md  v0.10.0.md  v0.11.0.md  v0.4.1.md  v0.5.0.md  v0.6.0.md  v0.6.1.md  v0.7.0.md  v0.7.1.md  v0.8.0.md  v0.8.2.md  v0.9.0.md  v0.9.1.md
crates/gc-buffer/: Cargo.toml
crates/gc-buffer/src/: context.rs  lib.rs  tokenizer.rs
crates/gc-config/: Cargo.toml
crates/gc-config/src/: lib.rs
crates/gc-overlay/: Cargo.toml
crates/gc-overlay/benches/: feedback_render.rs
crates/gc-overlay/src/: ansi.rs  frame.rs  layout.rs  lib.rs  render.rs  types.rs  util.rs
crates/gc-parser/: Cargo.toml
crates/gc-parser/benches/: parser_bench.rs
crates/gc-parser/src/: lib.rs  performer.rs  state.rs
crates/gc-parser/tests/: osc7772_proptest.rs
crates/gc-pty/: Cargo.toml
crates/gc-pty/src/: config_watch.rs  dynamic_result.rs  feedback.rs  handler.rs  input.rs  lib.rs  proxy.rs  resize.rs  spawn.rs
crates/gc-pty/tests/: async_timing.rs  osc7772_zsh_roundtrip.rs
crates/gc-suggest/: Cargo.toml  build.rs
crates/gc-suggest/benches/: suggest_bench.rs
crates/gc-suggest/examples/: run-transforms.rs
crates/gc-suggest/src/: alias.rs  alias_expand.rs  cache.rs  commands.rs  context.rs  embedded.rs  engine.rs  env.rs  filesystem.rs  frecency.rs  fuzzy.rs  git.rs  history.rs  json_path.rs  lib.rs  pipeline.rs  priority.rs  provider.rs  script.rs  spec_dirs.rs  specs.rs  ssh.rs  transform.rs  types.rs
crates/gc-suggest/src/providers/: ansible_doc.rs  arduino_cli.rs  macos_defaults.rs  mamba.rs  mod.rs  multipass.rs  pandoc.rs
crates/gc-suggest/src/providers/local_project/: cargo_workspace.rs  makefile.rs  mod.rs  npm_scripts.rs
crates/gc-suggest/tests/: aliases.rs  golden_specs.rs  local_project_e2e.rs  static_suggestions_proptest.proptest-regressions  static_suggestions_proptest.rs
crates/gc-terminal/: Cargo.toml
crates/gc-terminal/src/: lib.rs
crates/ghost-complete/: Cargo.toml  build.rs
crates/ghost-complete/src/: config_cmd.rs  doctor.rs  install.rs  main.rs  sanitize.rs  spec_dirs.rs  status.rs  validate.rs
crates/ghost-complete/src/tui/: app.rs  editor.rs  fields.rs  mod.rs  preview.rs  sample.rs  toml_patch.rs  ui.rs
crates/ghost-complete/tests/: smoke.rs
crates/ghost-complete/tests/harness/: mod.rs
docs/: ARCHITECTURE.md  COMPLETION_SPEC.md  CONFIGURATION.md  IMPLEMENTATION_PLAN.md  PROVIDERS.md  SPECS.md  ci-gates.md  coverage-baseline.json  phase-4-binary-size-findings.md  phase-minus-1-followups.md
docs/adr/: 0001-pty-proxy-vs-plugin.md  0002-vte-vs-vt100.md  0003-osc7772-buffer-framing.md  0004-static-arg-suggestions.md  0005-local-project-providers.md  README.md
docs/plans/: 2026-02-28-phase5-overlay-design.md  2026-02-28-phase6-integration.md
docs/superpowers/plans/: 2026-03-12-benchmarking.md  2026-03-12-doctor-config.md  2026-03-12-fig-spec-compat.md  2026-03-13-scroll-to-make-room.md  2026-03-15-history-display-config.md  2026-03-15-history-full-command-accept.md
docs/superpowers/specs/: 2026-03-12-benchmarking-design.md  2026-03-12-doctor-config-design.md  2026-03-12-fig-spec-compat-design.md  2026-03-12-scroll-to-make-room-design.md  2026-03-13-theme-presets-design.md  2026-03-15-history-display-config-design.md  2026-03-15-history-full-command-accept-design.md
scripts/: check-bench.sh  check-bench.test.sh  check-binary-size.sh  check-binary-size.test.sh  check-coverage-baseline-drift.sh  check-coverage-baseline-drift.test.sh  check-snapshots.sh  check-snapshots.test.sh
scripts/lib/: common.sh
shell/: ghost-complete.bash  ghost-complete.fish  ghost-complete.zsh  init.bash  init.zsh
specs/: -.json  act.json  adb.json  adr.json  afplay.json  aftman.json  ag.json  agrippa.json  airflow.json  aliases.json  amplify.json  ampx.json  ansible-config.json  ansible-doc.json  ansible-galaxy.json  ansible-lint.json  ansible-playbook.json  ansible.json  ant.json  appwrite.json  apt.json  arch.json  arduino-cli.json  argo.json  asar.json  asciinema.json  asdf.json  asr.json  assimp.json  astro.json  atlas.json  atuin.json  authchanger.json  autocannon.json  autojump.json  aws-vault.json  awsume.json  babel.json  banner.json  barnard59.json  (+659 more)
specs/__snapshots__/: -.snap  act.snap  adb.snap  adr.snap  afplay.snap  aftman.snap  ag.snap  agrippa.snap  airflow.snap  aliases.snap  amplify.snap  ampx.snap  ansible-config.snap  ansible-doc.snap  ansible-galaxy.snap  ansible-lint.snap  ansible-playbook.snap  ansible.snap  ant.snap  appwrite.snap  apt.snap  arch.snap  arduino-cli.snap  argo.snap  asar.snap  asciinema.snap  asdf.snap  asr.snap  assimp.snap  astro.snap  atlas.snap  atuin.snap  authchanger.snap  autocannon.snap  autojump.snap  aws-vault.snap  awsume.snap  babel.snap  banner.snap  barnard59.snap  (+662 more)
tests/shell/: test_bash_idempotency.sh  test_fish_idempotency.fish  test_zle_chaining.zsh
tools/fig-converter/: package-lock.json  package.json
tools/fig-converter/correctness-audit/: oracle-errors.md
tools/fig-converter/docs/: candidate-providers.json  oracle-results.json  oracle-results.md  shape-inventory.json  shape-inventory.md  spike-recount-decision.md  spike-report.md
tools/fig-converter/fixtures/: allowlist-smoke.js  suspicious-refs.js
tools/fig-converter/scripts/: gen-oracle-errors-md.mjs  list-corrected.mjs  patch-local-project-providers.mjs  patch-local-project-providers.test.mjs  run-spike.mjs  snapshot-specs.mjs
tools/fig-converter/src/: ast-analyzer.js  ast-analyzer.test.js  (+13 more)
tools/spec-priority-audit/: README.md  apply.mjs  apply.test.mjs  heuristics.json  package.json
(+30 files in other folders)
