[workspace]
resolver = "2"
members = [
    "crates/ghost-complete",
    "crates/gc-pty",
    "crates/gc-parser",
    "crates/gc-buffer",
    "crates/gc-suggest",
    "crates/gc-overlay",
    "crates/gc-config",
    "crates/gc-terminal",
]

[workspace.package]
version = "0.10.0-beta.1"
edition = "2021"
rust-version = "1.86"
license = "MIT"
authors = ["Stanislaw Marek"]
repository = "https://github.com/StanMarek/ghost-complete"
homepage = "https://github.com/StanMarek/ghost-complete"

[workspace.dependencies]
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "fs",
    "process",
    "signal",
    "time",
    "sync",
] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
toml_edit = "0.25"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
