[package]
name = "gc-overlay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
gc-suggest = { path = "../gc-suggest" }
gc-terminal = { path = "../gc-terminal" }
anyhow = { workspace = true }
unicode-width = "0.2.2"

[dev-dependencies]
# Enables the `TerminalProfile::for_*()` fixture constructors for tests only.
gc-terminal = { path = "../gc-terminal", features = ["test-utils"] }
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "feedback_render"
harness = false
