[package]
name = "gc-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
vte = "0.15"
unicode-width = "0.2.2"
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "parser_bench"
harness = false
