[package]
name = "gc-suggest"
version = "0.1.0"
edition = "2021"

[dependencies]
gc-buffer = { path = "../gc-buffer" }
nucleo = "0.5"
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
dirs = "5"

[dev-dependencies]
tempfile = "3"
