[package]
name = "gc-suggest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
gc-buffer = { path = "../gc-buffer" }
gc-config = { path = "../gc-config" }
nucleo = "0.5"
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1", features = ["preserve_order"] }
toml = { workspace = true }
tracing = { workspace = true }
dirs = "6"
regex = "1"
shlex = "1"
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"

[build-dependencies]
serde_json = "1"

[[bench]]
name = "suggest_bench"
harness = false
