[package]
name = "ghost-complete"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Terminal-native autocomplete engine using PTY proxying for macOS terminals"
keywords = ["terminal", "autocomplete", "completion", "pty", "ghostty"]
categories = ["command-line-utilities"]
readme = "../../README.md"
# Binary crate shipped exclusively via cargo-dist releases; keep out of crates.io.
publish = false
# Emits VERGEN_GIT_SHA / VERGEN_BUILD_TIMESTAMP for clap's `--version` string.
build = "build.rs"

[[bin]]
name = "ghost-complete"
path = "src/main.rs"

[dependencies]
gc-pty = { path = "../gc-pty" }
gc-config = { path = "../gc-config" }
gc-suggest = { path = "../gc-suggest" }
gc-terminal = { path = "../gc-terminal" }
tokio = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
dirs = "6"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = "1"
toml = "1.1"
libc = "0.2"
gc-overlay = { path = "../gc-overlay" }
ratatui = { workspace = true }
toml_edit = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]
portable-pty = "0.9"
tempfile = "3"
# Enables the `TerminalProfile::for_*()` fixture constructors for tests only.
gc-terminal = { path = "../gc-terminal", features = ["test-utils"] }
